# coronavirus_mapper

./: .all-contributorsrc  .gitignore  README.md  docker-compose.yml  pyproject.toml
coronavirus_mapper/: manage.py
coronavirus_mapper/coronavirus_mapper/: asgi.py  settings.py  urls.py  wsgi.py
coronavirus_mapper/coronavirus_mapper/locale/fi/LC_MESSAGES/: django.po
coronavirus_mapper/coronavirus_mapper/locale/fr/LC_MESSAGES/: django.po
coronavirus_mapper/coronavirus_mapper/locale/pt-BR/LC_MESSAGES/: django.po
coronavirus_mapper/coronavirus_mapper/templates/: base.html  navbar.html
coronavirus_mapper/reports/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
coronavirus_mapper/reports/migrations/: 0001_report.py  0002_report_first_symptomatic.py  0003_report_location.py  enable_postgis.py
coronavirus_mapper/reports/static/js/reports/: modal.js  reports.js
coronavirus_mapper/reports/templates/reports/: map.html
notebooks/: index.ipynb  parse_data.ipynb
