[tool.poetry]
name = "coronavirus_mapper"
version = "0.1.0"
description = "git@github.com:GeriLife/coronavirus_mapper.git"
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
